<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppTemplate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="login_welcome_message">Welcome</string>
    <string name="welcome_messages">Hello, %1$s!</string>
    <string name="title_activity_nfcactivity">NFC Activity</string>
    <string name="title_activity_account_statement">Account Statement</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estado_list_item_amount">$ %1.2f</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Student ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_message">Email or passowrd are incorrect</string>

    <!-- Activity Main -->
    <string name="ad_description">Place holder for ads</string>
    <string name="decorator_description">Simple image decorator</string>
    
    <!-- Fragment account statement -->
    <string name="no_info_message">No information available, select another date</string>
    
    <!-- Date Selection Dialog -->
    <string name="dialog_title">Select a date range</string>
    <string name="dialog_button">Done!</string>
    
    <!-- Acount statement fragment menu -->
    <string name="calendar_title">Calendar</string>
    <string name="interests_text">Intereses, \nComisiones y penalidades</string>
    
    
    

</resources>