<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.er.apptemplate.app.MainActivity" >

    <TextView
        android:id="@+id/textview_welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/welcome_messages"
        android:textSize="@dimen/text_large" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.cita.wallet.app.fragments.AppSectionsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imgDecorator"
        android:layout_below="@+id/textview_welcome_message"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/fragment_appsections_list" />

    <ImageView
        android:id="@+id/img_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/ad_description"
        android:src="@drawable/ad" />

    <ImageView
        android:id="@+id/imgDecorator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/img_ad"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/decorator_description"
        android:src="@drawable/decorator" />

</RelativeLayout>