<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.cita.wallet.app.LoginActivity"
    android:background="@drawable/bg_login">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:padding="@dimen/margin_massive"
        android:layout_centerInParent="true"
        android:background="@color/wellcome_background"
        android:visibility="gone"
        android:layout_marginLeft="0dp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_massive"
                android:text="@string/login_welcome_message"
                android:textColor="@android:color/white"
                android:paddingTop="@dimen/margin_larger"
                android:paddingBottom="@dimen/margin_larger"
                android:background="@color/wellcome_background" />

            <com.cita.wallet.app.ui.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_larger"
                app:floatLabelTrigger="text"
                android:background="@color/wellcome_edittext_background"
                app:floatLabelTextAppearance="@style/TextAppearance.YourApp.FloatLabel">

                <AutoCompleteTextView
                    android:layout_marginTop="@dimen/margin_large"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/margin_large"
                    android:textColor="@android:color/white"
                    android:singleLine="true" />
            </com.cita.wallet.app.ui.FloatLabelLayout>

            <com.cita.wallet.app.ui.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_larger"
                app:floatLabelTrigger="text"
                android:background="@color/wellcome_edittext_background"
                app:floatLabelTextAppearance="@style/TextAppearance.YourApp.FloatLabel">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:padding="@dimen/margin_large"
                    android:textColor="@android:color/white"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.cita.wallet.app.ui.FloatLabelLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/ButtonWhiteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:layout_margin="@dimen/margin_large"
                android:padding="@dimen/margin_large"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>



